manifests/base/application-controller/hanzocd-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-metrics
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: metrics
  name: hanzocd-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8082
    targetPort: 8082
  selector:
    app.kubernetes.io/name: hanzocd-application-controller
