manifests/base/application-controller/hanzocd-application-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-application-controller
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: application-controller
  name: hanzocd-application-controller-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-application-controller
  ingress:
    - from:
        - namespaceSelector: { }
      ports:
        - port: 8082
  policyTypes:
  - Ingress
